Better evaluation function